--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -22,11 +22,11 @@
                 <li ng:repeat="todo in todos" my:dblclick="editTodo(todo)" ng:class="(todo.done && ' done ') + (todo.editing && ' editing ')">
                     <div class="view">
                         <input class="toggle" type="checkbox" name="todo.done">
-                        <label>{{ todo.content }}</label>
+                        <label>{{ todo.title }}</label>
                         <a class="destroy" ng:click="removeTodo(todo)"></a>
                     </div>
                     <form ng:submit="finishEditing(todo)">
-                        <input class="edit" type="text" name="todo.content" my:focus="todo.editing" my:blur="finishEditing(todo)">
+                        <input class="edit" type="text" name="todo.title" my:focus="todo.editing" my:blur="finishEditing(todo)">
                     </form>
                 </li>
             </ul>
