Select text on focus (unfortunatly I had to take jquery-1.7.1.min.js as a new reference)

--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -44,6 +44,7 @@
     </div>
   <script src="js/booter.js"></script>
   <script src="js/lib/angular/angular.min.js" ng:autobind></script>
+  <script src="js/lib/jquery-1.7.1.min.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directive.js"></script>  
 </body>
