renamed css files according to the recent discussion here https://github.com/addyosmani/todomvc/pull/112

--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>AngularJS - TodoMVC</title>
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/overwrite.css">
 </head>
 <body>
     <div ng:controller="App.Controllers.TodoController" id="todoapp">
