renamed folder "lib" to "libs"

--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -43,8 +43,8 @@
         Created by <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>.
     </div>
   <script src="js/booter.js"></script>
-  <script src="js/lib/angular/angular.min.js" ng:autobind></script>
-  <script src="js/lib/jquery-1.7.1.min.js"></script>
+  <script src="js/libs/angular/angular.min.js" ng:autobind></script>
+  <script src="js/libs/jquery-1.7.1.min.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directive.js"></script>  
 </body>
