Small tweaks to jQuery example
- Use the base.css
- Trim whitespace on new todo
- Trim whitespace on todo update, and remove todo if empty
- Reset the checked state of "Mark all as complete", when the "Clear completed" button is clicked

--- a/architecture-examples/jquery/index.html
+++ b/architecture-examples/jquery/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>jQuery - TodoMVC</title>
-	<link rel="stylesheet" href="css/app.css">
+	<link rel="stylesheet" href="../../assets/base.css">
 </head>
 <body>
 	<div id="todoapp">
