added localStorage functionality

--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -41,6 +41,7 @@
     <div id="credits">
         Created by <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>.
     </div>
+  <script src="js/libs/json2.js"></script>
   <script src="js/booter.js"></script>
   <script src="js/libs/angular/angular.min.js" ng:autobind></script>
   <script src="js/controllers.js"></script>
