Adding links to all examples in labs, with descriptions and related project sites

--- a/architecture-examples/agilityjs/index.html
+++ b/architecture-examples/agilityjs/index.html
@@ -48,6 +48,7 @@
 		<p>Double-click to edit a todo</p>
 		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 		<p>Created by <a href="http://github.com/tshm/todomvc/">Tosh Shimayama</a></p>
+		<p>Part of <a href="http://github.com/addyosmani/todomvc/">TodoMVC</a></p>
 	</footer>
 
 	<script src="../../assets/jquery.min.js"></script>
