--- a/architecture-examples/fun/index.html
+++ b/architecture-examples/fun/index.html
@@ -2077,7 +2077,7 @@ fun = __require__["_21"].exports;
 			fun.emit(_XML_HOOK_35,  fun.expressions.Text("Double-click to edit a todo"))
 		var _XML_HOOK_36 = fun.name()
 		fun.hook(_XML_HOOK_36, _XML_HOOK_34, { tagName:"p", attrs:null })
-			fun.emit(_XML_HOOK_36,  fun.expressions.Text("Created with "))
+			fun.emit(_XML_HOOK_36,  fun.expressions.Text("Created for TodoMVC with "))
 			var _XML_HOOK_37 = fun.name()
 			fun.hook(_XML_HOOK_37, _XML_HOOK_36, { tagName:"a", attrs:[{name:"href",value: fun.expressions.Text("https://github.com/marcuswestin/fun")}] })
 				fun.emit(_XML_HOOK_37,  fun.expressions.Text("Fun"))
