--- a/architecture-examples/olives/index.html
+++ b/architecture-examples/olives/index.html
@@ -45,7 +45,8 @@
 		Double-Click to edit a todo.
 	</div>
 	<div id="credits">
-		Created by <a href="http://github.com/podefr/">Olivier Scherrer</a>.
+		<p>Created by <a href="http://github.com/podefr/">Olivier Scherrer</a>.</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</div>
 	<!-- scripts here -->
   <script src="js/libs/require.js"></script>           
