--- a/architecture-examples/dijon/index.html
+++ b/architecture-examples/dijon/index.html
@@ -25,7 +25,8 @@
 		Double-click to edit a todo.
 	</div>
 	<div id="credits">
-		Created by <a href="http://sindresorhus.com">Sindre Sorhus</a>.
+		<p>Created by <a href="http://sindresorhus.com">Sindre Sorhus</a>.</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</div>
 	<script type="text/x-handlebars-template" id="todo-template">
 	{{#this}}
