--- a/architecture-examples/troopjs/index.html
+++ b/architecture-examples/troopjs/index.html
@@ -27,7 +27,8 @@
 		Double click to edit a todo.
 	</div>
 	<div id="credits">
-		Created by <a href="http://troopjs.com/">Mikael Karon</a>.
+		<p>Created by <a href="http://troopjs.com/">Mikael Karon</a>.</p>
+		<p>Part of <a href="http://todomvc.com/">TodoMVC</a>.</p>
 	</div>
 	<!-- scripts here -->
 	<script type="text/javascript" data-main="js/app.js" src="js/lib/require.js"></script>
