Minor fixes and updates to broken templates and app indices

--- a/architecture-examples/fun/index.html
+++ b/architecture-examples/fun/index.html
@@ -2074,7 +2074,7 @@ fun = __require__["_21"].exports;
 	fun.hook(_XML_HOOK_34, _ROOT_HOOK_0, { tagName:"footer", attrs:[{name:"id",value: fun.expressions.Text("info")}] })
 		var _XML_HOOK_35 = fun.name()
 		fun.hook(_XML_HOOK_35, _XML_HOOK_34, { tagName:"p", attrs:null })
-			fun.emit(_XML_HOOK_35,  fun.expressions.Text("Double-click to edit a todo"))
+			fun.emit(_XML_HOOK_35,  fun.expressions.Text(""))
 		var _XML_HOOK_36 = fun.name()
 		fun.hook(_XML_HOOK_36, _XML_HOOK_34, { tagName:"p", attrs:null })
 			fun.emit(_XML_HOOK_36,  fun.expressions.Text("Created for TodoMVC with "))
