--- a/architecture-examples/jquery/index.html
+++ b/architecture-examples/jquery/index.html
@@ -2,46 +2,45 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>jQuery - TodoMVC</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>jQuery • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
 </head>
 <body>
-	<div id="todoapp">
-		<header>
-			<h1>Todos</h1>
-			<input id="new-todo" type="text" placeholder="What needs to be done?">
+	<section id="todoapp">
+		<header id="header">
+			<h1>todos</h1>
+			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list"></ul>
 		</section>
-		<footer>
-			<a id="clear-completed">Clear completed</a>
-			<div id="todo-count"></div>
+		<footer id="footer">
+			<span id="todo-count"><strong>0</strong> item left</span>
+			<button id="clear-completed">Clear completed</button>
 		</footer>
-	</div>
-	<div id="instructions">
-		Double-click to edit a todo.
-	</div>
-	<div id="credits">
-		Created by <a href="http://sindresorhus.com">Sindre Sorhus</a>.
-	</div>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>App and template and created by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+	</footer>
 	<script type="text/x-handlebars-template" id="todo-template">
 	{{#this}}
-	<li {{#if done}}class="done"{{/if}} data-id="{{id}}">
+	<li {{#if completed}}class="completed"{{/if}} data-id="{{id}}">
 		<div class="view">
-			<input class="toggle" type="checkbox" {{#if done}}checked{{/if}}>
+			<input class="toggle" type="checkbox" {{#if completed}}checked{{/if}}>
 			<label>{{title}}</label>
-			<a class="destroy"></a>
+			<button class="destroy"></button>
 		</div>
-		<input class="edit" type="text" value="{{title}}">
+		<input class="edit" value="{{title}}">
 	</li>
 	{{/this}}
 	</script>
-	<script src="js/libs/json2.js"></script>
-	<script src="js/libs/jquery-1.7.1.min.js"></script>
-	<script src="js/libs/handlebars-1.0.0.beta.6.js"></script>
+	<script src="../../assets/jquery.min.js"></script>
+	<script src="../../assets/handlebars.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
