Updating index to reference Fidel, DUEL and Broke.js apps. Included descriptions. Revised intro text.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="site/css/bootstrap.min.css" rel="stylesheet">
+		<link href="site/css/bootstrap.css" rel="stylesheet">
 		<link href="site/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="site/css/main.css" rel="stylesheet">
 	</head>
@@ -21,7 +21,7 @@
 				<div class="span5 header-title">
 					<h1>TodoMVC Labs</h1>
 					<p>
-						A common learning application for JavaScript MV* frameworks
+						A preview of new demo applications for JavaScript MV* frameworks
 						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://addyosmani.github.com/todomvc" data-via="addyosmani">Tweet</a>
 					</p>
 					<nav>
@@ -33,9 +33,15 @@
 			<div class="row">
 				<div class="span4">
 					<h2>Introduction</h2>
-					<p>TodoMVC Labs showcases sample Todo applications for frameworks that have just been released or are still awaiting consideration for inclusion in TodoMVC.</p>
-					<p>While our team are working on improving these applications for a future release of TodoMVC (e.g ensuring they meet our functional requirements), developers wishing to try out brand new frameworks or see what's coming next for this project can preview this today.</p>
-					<p>* Using our latest template</p>
+
+					<p>TodoMVC Labs showcases sample Todo applications for frameworks that have just been released or are still awaiting consideration for inclusion in <a href="http://todomvc.com">TodoMVC</a>.</p>
+
+					<p>These implementations may not completely meet our specifications just yet, but are functional enough to provide developers with a preview of what they're capable of.</p>
+
+					<p>While our team are working on improving these applications for a future release of TodoMVC, developers wishing to try out brand new frameworks or see what's coming next for this project can preview these applications today.</p>
+
+					<p>An * indicates the application is using our latest template</p>
+
 				</div>
 				<div class="span5" id="demos">
 					<h2>Demos</h2>
@@ -51,6 +57,15 @@
 						</li>
 						<li>
 							<a href="architecture-examples/fun/index.html" data-source="https://github.com/marcuswestin/fun" data-content="Fun is not an MVC framework, but a programming language meant to tackle MVC/UI programming on a deeper, more fundamental level - part reactive/functional and part sequential/procedural.">Fun *</a>
+						</li>
+						<li>
+							<a href="architecture-examples/duel/www/index.html" data-source="http://canjs.us" data-content="">DUEL *</a>
+						</li>
+						<li>
+							<a href="architecture-examples/fidel/index.html" data-source="https://github.com/jgallen23/fidel" data-content="Fidel is a micro-framework for building widgets, modules and plugins. It resembles the controller in Spine.js and could be considered a controller library. Having not heavily needed models and routing in some of the single-page applications the author built, he found a library focusing on controller logic more useful.">Fidel</a>
+						</li>
+						<li>
+							<a href="architecture-examples/broke/index.html" data-source="https://github.com/brokenseal/broke-client" data-content="The Broke Javascript Framework is a porting of the fantastic Django Web Framework on Javascript. It summarizes all the best concepts present in Django like url resolving, decoupling, DRY principle, project-specific settings and a pretty simple template engine. It could be put in the big Javascript MVC frameworks group outside there, but, as Django is, this is more a MTV (Model-Template-View) framework.">Broke.js</a>
 						</li>
 						</ul>
 					<ul class="nav nav-pills">
@@ -102,9 +117,6 @@
 						<li>
 							<a href="architecture-examples/canjs/zepto/index.html" data-source="http://canjs.us" data-content="CanJS with Zepto. CanJS is a client-side, JavaScript framework that makes building rich web applications easy. It provides can.Model (for connecting to RESTful JSON interfaces), can.View (for template loading and caching), can.Observe (for key-value binding), can.EJS (live binding templates), can.Control (declarative event bindings) and can.route (routing support).">CanJS (Zepto)</a>
 						</li>
-					</ul>
-					<ul class="nav nav-pills">
-
 					</ul>
 				</div>
 
