Formatting, credits, TodoMVC mentions and further changes in prep for a release.

--- a/architecture-examples/batmanjs/index.html
+++ b/architecture-examples/batmanjs/index.html
@@ -39,10 +39,15 @@
         <div class="count"><span class="countVal" data-bind="Todo.remaining"></span> left</div>
       </footer>
       <!--
-    This version by https://github.com/johnknott/batman-todos-example
+    This version by 
     Currently missing todo edit.
     -->
     </div>
+  </div>
+
+  <div id="credits">
+    <p>Created by <a href="https://github.com/johnknott/batman-todos-example">John Knott</a></p>
+     <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
   </div>
   
 <script type="text/coffeescript">
