--- a/architecture-examples/canjs/yui/index.html
+++ b/architecture-examples/canjs/yui/index.html
@@ -20,7 +20,8 @@
 		Double-click to edit a todo.
 	</div>
 	<div id="credits">
-		Created by <a href="http://bitovi.com/">Bitovi</a>.
+		<p>Created by <a href="http://bitovi.com/">Bitovi</a>.</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
 	</div>
 	<script src="http://yui.yahooapis.com/3.4.1/build/yui/yui.js"></script>
 	<script src="http://donejs.com/can/dist/edge/can.yui.js"></script>
