--- a/architecture-examples/duel/www/index.html
+++ b/architecture-examples/duel/www/index.html
@@ -14,6 +14,7 @@
 		<p>Double-click to edit a todo</p>
 		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 		<p>Ported to <a href="http://duelengine.org">DUEL</a> by <a href="http://mck.me">Stephen McKamey</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
 	</footer>
 
 	<script src="./cdn/1de7392f10ea2465d68b839144090d158ba7730f.js"></script>
