--- a/architecture-examples/fidel/index.html
+++ b/architecture-examples/fidel/index.html
@@ -36,9 +36,11 @@
 
   
     <div id="credits">
-      Created by
+      <p>Created by
       <br />
-      <a href="http://jga.me/">Greg Allen</a> (<a href="http://twitter.com/jgaui">jgaui</a>).
+      <a href="http://jga.me/">Greg Allen</a> (<a href="http://twitter.com/jgaui">jgaui</a>).</p>
+      <br />
+    <p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
     </div>
 
     <!-- Templates -->
