--- a/architecture-examples/stapes/index.html
+++ b/architecture-examples/stapes/index.html
@@ -39,6 +39,7 @@
 		<p>Double-click to edit a todo</p>
 		<!-- change this out with your name and url ↓ -->
 		<p>Created by <a href="http://github.com/hay/stapes/">Hay Kranen</a>.</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
 	</footer>
 	<!-- scripts here -->
 	<script src="js/lib/jquery.js"></script>
