--- a/architecture-examples/canjs/jquery-widget/index.html
+++ b/architecture-examples/canjs/jquery-widget/index.html
@@ -22,7 +22,8 @@
 		Double-click to edit a todo.
 	</div>
 	<div id="credits">
-		Created by <a href="http://bitovi.com/">Bitovi</a>.
+		<p>Created by <a href="http://bitovi.com/">Bitovi</a>.</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
 	</div>
 	<div id="calendar"></div>
 	<script src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
