--- a/architecture-examples/canjs/mootools/index.html
+++ b/architecture-examples/canjs/mootools/index.html
@@ -20,7 +20,8 @@
 		Double-click to edit a todo.
 	</div>
 	<div id="credits">
-		Created by <a href="http://bitovi.com/">Bitovi</a>.
+		<p>Created by <a href="http://bitovi.com/">Bitovi</a>.</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/mootools/1.4.3/mootools.js"></script>
 	<script src="mootools-more-event_pseudos-1.4.0.1.js"></script>
