--- a/architecture-examples/canjs/yui-widget/index.html
+++ b/architecture-examples/canjs/yui-widget/index.html
@@ -21,7 +21,8 @@
 		Double-click to edit a todo.
 	</div>
 	<div id="credits">
-		Created by <a href="http://bitovi.com/">Bitovi</a>.
+		<p>Created by <a href="http://bitovi.com/">Bitovi</a>.</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
 	</div>
 	<div id="calendar"></div>
 	<script src="http://yui.yahooapis.com/3.4.1/build/yui/yui-min.js"></script>
