--- a/architecture-examples/canjs/zepto/index.html
+++ b/architecture-examples/canjs/zepto/index.html
@@ -17,7 +17,8 @@
 		Double-click to edit a todo.
 	</div>
 	<div id="credits">
-		Created by <a href="http://bitovi.com/">Bitovi</a>.
+		<p>Created by <a href="http://bitovi.com/">Bitovi</a>.</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
 	</div>
 	<!--
 		Zepto 0.8 doesn't support delegate focus/blur.
