--- a/architecture-examples/broke/index.html
+++ b/architecture-examples/broke/index.html
@@ -22,6 +22,12 @@
         </div>
     </div>
 
+    <div id="credits">
+        <p>Created by <a href="https://github.com/brokenseal">Davide Callegari</a></p>
+     <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+    </div>
+
+
     <script src="libs/jquery-1.6.4.min.js"></script>
     <script src="libs/gettext.min.js"></script>
     <script src="libs/pyjammin.min.js"></script>
