Updating index with further information on how to contribute, minor adjustment to formatting on emberjs credits.

--- a/dependency-examples/emberjs_require/index.html
+++ b/dependency-examples/emberjs_require/index.html
@@ -37,8 +37,9 @@
 
   <div id="credits">
     Credits:
-    <br/>
-	  Tom Dale, Addy Osmani, Стас Сушков
+    
+	  <p>Tom Dale, Addy Osmani, Стас Сушков</p>
+    <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
   </div>
 </body>
 </html>
