--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 					<h1>TodoMVC Labs</h1>
 					<p>
 						A preview of new demo applications for JavaScript MV* frameworks
-						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://addyosmani.github.com/todomvc" data-via="addyosmani">Tweet</a>
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://addyosmani.github.com/todomvc/labs" data-via="addyosmani">Tweet</a>
 					</p>
 					<nav>
-						<a class="btn btn-primary btn-large" href="#">Download</a>
+						<a class="btn btn-primary btn-large" href="http://github.com/addyosmani/todomvc/zipball/labs">Download Latest</a>
 						<a class="btn btn-large" href="http://github.com/addyosmani/todomvc">Follow on GitHub</a>
 					</nav>
 				</div>
@@ -40,7 +40,8 @@
 
 					<p>While our team are working on improving these applications for a future release of TodoMVC, developers wishing to try out brand new frameworks or see what's coming next for this project can preview these applications today.</p>
 
-					<p>An * indicates the application is using our latest template</p>
+					<p><em>An * indicates the application is using our latest template. Please note that all applications should be run on a local HTTP server unless we've said otherwise.</em></p>
+					<p></p>
 
 				</div>
 				<div class="span5" id="demos">
@@ -120,12 +121,19 @@
 					</ul>
 				</div>
 
+				<div class="span3">
+					<h2>Contributing</h2>
+					<p>Interested in helping us improve or complete these applications?</p><p>Please feel free to get involved by taking a look at our <a href="https://github.com/addyosmani/todomvc/issues">issue tracker</a> or reviewing one of these apps on the <a href="https://github.com/addyosmani/todomvc/tree/labs">labs branch</a> of TodoMVC.</p>
+					<p>We're currently working towards bringing all applications in-line with our official <a href="https://github.com/addyosmani/todomvc/wiki/App-Specification">specifications</a> using an updated <a href="https://github.com/addyosmani/todomvc/tree/master/template">template</a> to ensure consistency in style.</p>
+					<p>If you would like to get involved or simply suggest ideas for how we can improve the project further, please feel free to <a href="https://github.com/addyosmani/">reach</a> <a href="https://github.com/sindresorhus/">out</a>.</p>
+				</div>
+
 			</div>
 
 			<hr>
 			<footer>
 				<p>&copy; TodoMVC Labs. Brought to you by <a href="https://github.com/addyosmani">Addy Osmani</a> and <a href="https://github.com/sindresorhus">Sindre Sorhus</a>.</p>
-				<p id="contributor-list">Big thanks to our magnificent contributors: <span></span></p>
+				<p id="contributor-list">Big thanks to our magnificent labs contributors: <span></span></p>
 			</footer>
 		</div>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
