Add link to Labs

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<a class="btn btn-primary btn-large" href="https://github.com/addyosmani/todomvc/zipball/v0.3">Download</a>
 						<a class="btn btn-large" href="http://github.com/addyosmani/todomvc">Follow on GitHub</a>
 					</nav>
+					<p style="font-size: 16px;">Check out our new subproject <a href="http://todomvc.com/labs">TodoMVC Labs</a></p>
 				</div>
 			</header>
 			<div class="row">
